customised theme for my site

--- a/source/styles/screen.styl
+++ b/source/styles/screen.styl
@@ -820,6 +820,18 @@ figure.highlight
     border-radius 0
     margin 0
 
+img.profile_img
+    float left
+    margin: 0 10px 0 0 !important
+    width: 20% !important
+
+header
+  a.github-ribbon
+    position: initial
+
+    img
+      max-height: none
+
 // ===========================================================================
 // 6. Media Queries
 // ===========================================================================
